# atividade-engenharia-de-dados-pyspark

./: .gitignore  404.html  README.md  delta-lake.ipynb  iceberg.ipynb  index.html  mkdocs.yml  pyproject.toml
.ipynb_checkpoints/: delta-lake-checkpoint.ipynb  iceberg-checkpoint.ipynb
RAW/CLIENTES/: .part-00000-24361e31-5fcc-4b70-9e91-752846be02f7-c000.snappy.parquet.crc  .part-00000-3d0108cd-d581-41c3-9ce1-97944e158394-c000.snappy.parquet.crc  .part-00000-7c0ef64a-a991-43e5-a2c1-299f887c461d-c000.snappy.parquet.crc  .part-00001-ea605b9d-fe13-44b6-beb1-09ffd1377eee-c000.snappy.parquet.crc  .part-00002-1cf55329-d479-4570-a798-6120f9629615-c000.snappy.parquet.crc  part-00000-24361e31-5fcc-4b70-9e91-752846be02f7-c000.snappy.parquet  part-00000-3d0108cd-d581-41c3-9ce1-97944e158394-c000.snappy.parquet  part-00000-7c0ef64a-a991-43e5-a2c1-299f887c461d-c000.snappy.parquet  part-00001-ea605b9d-fe13-44b6-beb1-09ffd1377eee-c000.snappy.parquet  part-00002-1cf55329-d479-4570-a798-6120f9629615-c000.snappy.parquet
RAW/PRODUTOS/: .part-00000-34102086-a600-4b06-a0ad-c6c595b70120-c000.snappy.parquet.crc  .part-00000-4838750a-7138-42c4-9b2d-0d2e73f5a734-c000.snappy.parquet.crc  .part-00000-954840d4-a48c-43c1-b024-6e1a9a5b0894-c000.snappy.parquet.crc  .part-00000-de197808-4ec3-4e38-9b00-938653d5011d-c000.snappy.parquet.crc  .part-00001-c47c3c72-f848-4b96-91c5-acd789587aa5-c000.snappy.parquet.crc  (+7 more)
deltalake/: index.html
docs/: deltalake.md  iceberg.md  index.md
iceberg/: index.html
notebooks/: delta-lake.ipynb  iceberg.ipynb
search/: search_index.json
(+115 files in other folders)
