[project]
name = "atividade-engenharia-de-dados-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "bonetti"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark (==3.4.2)",
    "delta-spark (==2.4.0)",
    "jupyterlab (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
